Clean up and simplify

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,21 @@
 version: "3.7"
 
 services:
-  nginx-proxy:
-    container_name: "nginx-proxy"
-    build: "./nginx-proxy"
+  micro-sample-nginx-proxy:
+    container_name: "micro-sample-nginx-proxy"
+    image: "nginx"
+    volumes:
+      - "./nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
     ports:
       - "8080:80"
     links:
-      - "service1"
-      - "service2"
+      - "micro-sample-service1"
+      - "micro-sample-service2"
 
-  service1:
+  micro-sample-service1:
+    container_name: "micro-sample-service1"
     build: "./service1"
-    container_name: "service1"
 
-  service2:
+  micro-sample-service2:
+    container_name: "micro-sample-service2"
     build: "./service2"
-    container_name: "service2"
